--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="home">Home</string>
     <string name="cart">Cart</string>
     <string name="person">Tôi</string>
+    <string name="phoneChargeCord">Dây sạc</string>
+    <string name="phoneCharge">Củ sạc</string>
 </resources>
