--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="person">Tôi</string>
     <string name="phoneChargeCord">Dây sạc</string>
     <string name="phoneCharge">Củ sạc</string>
+    <string name="telephone">Điện thoại</string>
 </resources>
