login,register user

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="phoneChargeCord">Dây sạc</string>
     <string name="phoneCharge">Củ sạc</string>
     <string name="telephone">Điện thoại</string>
+    <string name="ipad">Ipad</string>
 </resources>
