--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="home">Home</string>
-    <string name="cart">Cart</string>
+    <string name="cart">Notification</string>
     <string name="person">Tôi</string>
     <string name="phoneChargeCord">Thịt và Hải sản</string>
     <string name="phoneCharge">Rau củ qu</string>
