--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="cart">Notification</string>
     <string name="person">Tôi</string>
     <string name="phoneChargeCord">Thịt và Hải sản</string>
-    <string name="phoneCharge">Rau củ qu</string>
+    <string name="phoneCharge">Rau củ quả</string>
     <string name="telephone">Trái cây</string>
     <string name="ipad">Đồ uống</string>
     <string name="title_activity_cate">CateActivity</string>
